# pal_wsg_gripper_simulation_mujoco

example/: scene.xml.xacro
launch/: gripper.launch
pal_wsg_gripper_controller_configuration_mujoco/: CMakeLists.txt  package.xml
pal_wsg_gripper_controller_configuration_mujoco/launch/: gripper_controller.launch
pal_wsg_gripper_mujoco/: CMakeLists.txt  package.xml
pal_wsg_gripper_mujoco/assets/xacro/: gripper.mujoco.xacro
pal_wsg_gripper_simulation_mujoco/: CMakeLists.txt  package.xml
